# treesight

./: .gitignore  README.md  pyproject.toml
.askrepo_index/: chunks.json  meta.json  vectors.npy
askrepo/: ask.py  chunker.py  cli.py  embeddings.py  index.py  search.py  sources.py
treesight/: __init__.py  ask.py  cli.py  index.py  search.py
