[project]
name = "askrepo"
version = "0.1.0"
description = "Semantic code search: AST-aware chunking + pluggable embeddings + vector search."
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.scripts]
askrepo = "askrepo.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["askrepo"]
